# KISYSTEM

./: .gitignore  CHANGES.md  CLAUDE_INSTRUCTIONS--.md  CLAUDE_INSTRUCTIONS.md  CLAUDE_INSTRUCTIONS_2.md  CLEAR_AND_RUN.ps1  DIAGNOSE_AND_FIX.ps1  FILE_URLS.txt  INSTALL.md  KISYSTEM_CLEANUP_FIXED.ps1  KISYSTEM_COMPLETE.txt  KISYSTEM_COMPLETE_SETUP.ps1  PHASE7_GUIDE.md  QUICKSTART.md  README.md  START_KISYSTEM.bat  SYNC_WITH_GITHUB.ps1  U3DAW_MASTER_SPEC.md  UPDATE_AGENTS.ps1  add_metrics_class.py  analyze_kisystem.py  capture_nsys_output.py  create_learning_log.py  create_learning_log_v2.py  cuda_convolution_challenge.py  cuda_convolution_kernel.cu  debug_nsys_output.py  diagnose_learning.py  fix_fixer_template.py  fix_import.py  fix_learning_init.py  fix_model_selector.py  fix_selector_sig.py  fix_supervisor_import.py  fix_test_paths.py  fix_unicode.py  fix_unicode_u3daw.py  generate_urls.ps1  git_commit_v3.9.ps1  kisystem_setup.ps1  (+21 more)
Logs/: integrity_report.json
Müll/: error_handler.py  fixer_agent_v3.py  run_phase7.ps1  start_u3daw.py  test_hybrid_handler.py  u3daw_auto_loop.py
U3DAW/: CMakeLists.txt  README.md  daily_standup_template.md  phase1_tasks.json
U3DAW/daily_reports/: report_20251110.md
U3DAW/docs/research/: linkwitz_riley_theory.md
U3DAW/learning_logs/: learning_log.json
U3DAW/src/: main_test.cpp
U3DAW/src/tep/pqmf/: cufft_wrapper.h  filter_coefficients.json  linkwitz_riley.h  overlap_save.h
U3DAW/tests/: CMakeLists.txt
U3DAW/tests/unit/: test_filters.cpp
agents/: builder_agent.py  cuda_profiler_agent.py  docs_agent_v2.py  fixer_agent------.py  fixer_agent-----.py  (+16 more)
(+58 files in other folders)
